# MRTKLIB

./: .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md  mkdocs.yml  readme.md  ruff.toml  taplo.toml  vcpkg.json
.github/workflows/: build.yaml  docs.yaml
app/consapp/recvbias/: recvbias.c
app/consapp/rnx2rtkp/: rnx2rtkp.c
app/consapp/rtkrcv/: rtkrcv.c
apps/convbin/: convbin.c
apps/dumpcssr/: dumpcssr.c
apps/recvbias/: recvbias.c
apps/rnx2rtkp/: rnx2rtkp.c
apps/rtkrcv/: rtkrcv.c  vt.c  vt.h
apps/ssr2obs/: ssr2obs.c
apps/ssr2osr/: ssr2osr.c
apps/str2str/: str2str.c
conf/benchmark/: clas.conf  clas.toml  madoca.conf  madoca.toml  nagoya.conf  nagoya.toml  rtk.conf  rtk.toml  tokyo.conf  tokyo.toml
conf/claslib/: rnx2rtkp.conf  rnx2rtkp.toml  rnx2rtkp_L1CL5.conf  rnx2rtkp_L1CL5.toml  rnx2rtkp_vrs.conf  rnx2rtkp_vrs.toml  rtkrcv.conf  rtkrcv.toml  rtkrcv_2ch.conf  rtkrcv_2ch.toml  rtkrcv_rtcm3_ubx.conf  rtkrcv_rtcm3_ubx.toml  rtkrcv_sbf_l6d.conf  rtkrcv_sbf_l6d.toml  rtkrcv_ubx_clas.toml  ssr2obs.conf  ssr2obs.toml  ssr2osr.conf  ssr2osr.toml
conf/madocalib/: rnx2rtkp.conf  rnx2rtkp.toml  rnx2rtkp_pppar.conf  rnx2rtkp_pppar.toml  rnx2rtkp_pppar_iono.conf  rnx2rtkp_pppar_iono.toml
conf/malib/: rnx2rtkp.toml  rtkrcv.conf  rtkrcv.toml
docs/: benchmark.md  index.md  release-notes-v0.3.2.md  release-notes-v0.3.3.md  release-notes-v0.4.1.md  release-notes-v0.4.2.md  release-notes-v0.4.3.md  release-notes-v0.4.4.md  release-notes-v0.5.0.md  release-notes-v0.5.1.md  release-notes-v0.5.3.md  release-notes-v0.5.6.md  release-notes-v0.5.7.md  release-notes-v0.6.1.md  requirements.txt  rtkrcv-clas-realtime.md  test-accuracy-methodology.md
docs/getting-started/: first-run.md  install.md
docs/guide/: cli.md  configuration.md  ntrip.md  quickstart-clas.md  quickstart-madoca-ppp.md
docs/reference/: api.md  benchmark.md  config-options.md  rtkrcv-clas-realtime.md  test-accuracy-methodology.md
docs/releases/: changelog.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  release-notes-v0.4.1.md  release-notes-v0.4.2.md  release-notes-v0.4.3.md  release-notes-v0.4.4.md  release-notes-v0.5.2.md  release-notes-v0.5.4.md  release-notes-v0.5.5.md  release-notes-v0.6.0.md  release-notes-v0.6.2.md  release-notes-v0.6.3.md
docs/stylesheets/: extra.css
include/mrtklib/: mrtk_antenna.h  mrtk_astro.h  mrtk_atmos.h  mrtk_bias_sinex.h  mrtk_bits.h  mrtk_clas.h  mrtk_const.h  mrtk_context.h  mrtk_coords.h  mrtk_eph.h  mrtk_fcb.h  mrtk_foundation.h  mrtk_geoid.h  mrtk_ionex.h  mrtk_lambda.h  mrtk_madoca.h  mrtk_madoca_local_comb.h  mrtk_madoca_local_corr.h  mrtk_mat.h  mrtk_nav.h  mrtk_obs.h  mrtk_opt.h  mrtk_options.h  mrtk_peph.h  mrtk_pntpos.h  mrtk_postpos.h  mrtk_ppp.h  mrtk_ppp_ar.h  mrtk_ppp_rtk.h  mrtk_rcvraw.h  mrtk_rinex.h  mrtk_rtcm.h  mrtk_rtkpos.h  mrtk_rtksvr.h  mrtk_sbas.h  mrtk_sol.h  mrtk_spp.h  mrtk_station.h  mrtk_stream.h  mrtk_sys.h  (+7 more)
scripts/: apply_headers.py  fix_trace_fwd_decls.py  migrate_trace_ctx.py  pyproject.toml
scripts/benchmark/: cases.py  compare_ppc.py  download_l6.py  run_benchmark.py
scripts/codegen/: __init__.py  gen_geoid.py
scripts/docs/: gen_config_ref.py
scripts/plotting/: __init__.py  plot_grid.py  plot_igp.py  plot_iono.py  plot_lex_eph.py  plot_lex_ion.py  plot_lex_ure.py  plot_peph.py  plot_stec.py
scripts/tests/: __init__.py  _geo.py  check_pos_scatter.py  compare_nmea.py  compare_nmea_abs.py  compare_pos.py  compare_pos_abs.py  plot_gloeph.py
scripts/tools/: conf2toml.py  gen_bnx_tag.py  gen_l6_tag.py
src/: biassnx.c  ephemeris.c  lambda.c  lclcmbcmn.c  lclcmn.c  mdccssr.c  mrtk_atmos.c  mrtk_bits.c  mrtk_eph.c  mrtk_geoid.c  mrtk_nav.c  mrtk_obs.c  mrtk_peph.c  mrtk_pntpos.c  mrtk_rcvraw.c  mrtk_rinex.c  mrtk_rtcm.c  mrtk_rtcm2.c  mrtk_rtcm3.c  mrtk_rtcm3e.c  mrtk_rtcm3lcl.c  mrtk_sbas.c  mrtk_sys.c  mrtk_tides.c  options.c  pntpos.c  postpos.c  ppp.c  ppp_ar.c  readfcb.c  rinex.c  rtcm3.c  rtcm3e.c  rtcm3lcl.c  rtkcmn.c  rtklib.h  rtkpos.c  rtksvr.c  stream.c
src/clas/: mrtk_clas.c  mrtk_clas_grid.c  mrtk_clas_isb.c  mrtk_clas_osr.c
src/core/: mrtk_bits.c  mrtk_context.c  mrtk_coords.c  mrtk_core.c  mrtk_mat.c  mrtk_sys.c  mrtk_time.c  mrtk_toml.c  mrtk_trace.c
src/data/: mrtk_bias_sinex.c  mrtk_convrnx.c  mrtk_eph.c  mrtk_fcb.c  mrtk_ionex.c  mrtk_nav.c  mrtk_obs.c  mrtk_peph.c  mrtk_rcvraw.c  mrtk_rinex.c  mrtk_sbas.c
src/data/rcv/: mrtk_rcv_binex.c  mrtk_rcv_crescent.c  mrtk_rcv_javad.c  mrtk_rcv_novatel.c  mrtk_rcv_nvs.c  mrtk_rcv_rt17.c  mrtk_rcv_septentrio.c  mrtk_rcv_skytraq.c  mrtk_rcv_ss2.c  mrtk_rcv_ublox.c
src/madoca/: mrtk_madoca.c  mrtk_madoca_iono.c  mrtk_madoca_local_comb.c  mrtk_madoca_local_corr.c  mrtk_mdciono.c
src/models/: mrtk_antenna.c  mrtk_astro.c  mrtk_atmos.c  mrtk_geoid.c  mrtk_station.c  mrtk_tides.c
src/pos/: mrtk_lambda.c  mrtk_opt.c  mrtk_options.c  mrtk_postpos.c  mrtk_ppp.c  mrtk_ppp_ar.c  mrtk_ppp_iono.c  mrtk_ppp_rtk.c  mrtk_rtkpos.c  mrtk_sol.c  mrtk_spp.c  mrtk_vrs.c
src/rcv/: mrtk_rcv_binex.c  mrtk_rcv_crescent.c  mrtk_rcv_javad.c  mrtk_rcv_novatel.c  mrtk_rcv_nvs.c  mrtk_rcv_rt17.c  mrtk_rcv_septentrio.c  mrtk_rcv_skytraq.c  mrtk_rcv_ss2.c  mrtk_rcv_ublox.c  septentrio.c  ublox.c
src/rtcm/: mrtk_rtcm.c  mrtk_rtcm2.c  mrtk_rtcm3.c  mrtk_rtcm3_local_corr.c  mrtk_rtcm3e.c  mrtk_rtcm3lcl.c
src/stream/: mrtk_rtksvr.c  mrtk_stream.c  mrtk_streamsvr.c  ntrip_chunk.h
test/cmake/: cleanup_testdata.cmake  download_tec.cmake
test/data/regression/: gen_ref_rb.sh  (+3 more)
tests/cmake/: compare_bia.cmake  run_rtkrcv_test.sh
tests/utest/: t_atmos.c  t_coord.c  t_geoid.c  t_gloeph.c  t_ionex.c  t_lambda.c  t_matrix.c  t_misc.c  t_ntrip.c  t_ppp.c  t_preceph.c  t_rinex.c  t_rinex4.c  t_time.c  t_tle.c  testgloeph.out  testpeph1.out  testpeph2.out
util/geniono/: estiono.c  gengrid.c  geniono.c  genstec.c  rcvdcb.c
util/logfile/: margelog.c
util/rnx2rtcm/: rnx2rtcm.c
util/simobs/: simobs.c
util/testeph/: diffeph.c  dumpssr.c
util/testlex/: convlex.c  dumplex.c  dumpssr.c  outlexion.c
(+27 files in other folders)
